# chatbot

./: .gitignore  INTERVIEW_PREP.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rag_agent/: __init__.py  config.py  types.py
src/rag_agent/agent/: fallback.py  planner.py  registry.py  tools.py
src/rag_agent/api/: main.py
src/rag_agent/ingest/: chunker.py  embedder.py  parser.py  pipeline.py
src/rag_agent/obs/: tracing.py
src/rag_agent/retrieval/: fusion.py  retriever.py  vector_store.py
tests/contracts/: test_prompt_groundedness.py
tests/integration/: test_agent_pipeline.py  test_api_functional.py
tests/unit/: test_chunker.py  test_tool_latency_observer.py  test_tool_registry.py
