[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-agent-system"
version = "0.1.0"
description = "Production-oriented RAG Agent with semantic chunking, multi-route retrieval fusion, and observability"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AI Fullstack Engineer" }]
dependencies = [
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-community>=0.3.0",
  "pydantic>=2.8.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "types-requests>=2.32.0.20241016",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
mypy_path = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "langchain.*",
  "langchain_core.*",
  "langchain_community.*",
  "langchain_openai.*",
]
ignore_missing_imports = true
